<resources>
    <string name="app_name">DailyJoke</string>
    <string name="welcome_msg">Welcome to Jokee</string>
    <string name="banner_title">A joke a day keeps the doctor away</string>
    <string name="banner_desc">If you joke wrong way, your teeth have to pay. (Serious)</string>
    <string name="footer_desc">This appis created as part of HIsolutions program. The materials contained on this website are provided for general information only and do not constitute any form of advice. HLS assumes no responsibility for the accuracy of any particular statement and accepts no liability for any loss or damage which may arise from reliance on the information contained on this site</string>
    <string name="footer_sub_desc">Copyright 2021 HLS</string>
    <string name="handcrafted_by">Handcrafted by</string>
    <string name="creator_name">Jim HLS</string>
    <string name="funny_text">This is Funny!</string>
    <string name="not_funny_text">This is not Funny.</string>
    <string name="empty_data">That\'s all the jokes for today! Come back another day!</string>
</resources>